@@ -15,20 +15,14 @@ public class NumberUtils {
 
     public static void reload() {
         final String[] lang = CONFIG.getString("number-formatting.short", "en_US").split("_");
-        shortFormat = DecimalFormat.getCompactNumberInstance(new Locale(lang[0], lang[1]), NumberFormat.Style.SHORT);
+        shortFormat = DecimalFormat.getCompactNumberInstance(Locale.of(lang[0], lang[1]), NumberFormat.Style.SHORT);
 
         int mode = CONFIG.getInt("number-formatting.mode", 0);
-        switch (mode) {
-            case 0:
-                formatter = new DecimalFormat(CONFIG.getString("number-formatting.formatted", "#,###.##"));
-                break;
-            case 1:
-                formatter = shortFormat;
-                break;
-            case 2:
-                formatter = null;
-                break;
-        }
+        formatter = switch (mode) {
+            case 0 -> new DecimalFormat(CONFIG.getString("number-formatting.formatted", "#,###.##"));
+            case 1 -> shortFormat;
+            default -> null;
+        };
     }
 
     public static String formatNumber(double number) {
